Adding OpenAPI spec
